# GoAeroSD

./: README.md
Landing Scripts/: Slope Calc and Check.cpp
lg/: CMakeLists.txt  comProc.cpp  incCalc.cpp  incCalc2.cpp  lg.launch  readme.txt
lg/launch/: lg.launch
lg/src/: PIActuation.cpp  actuator.cpp  comProc  incCalc.cpp  readme.txt
